<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.InicioFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fini_txtv_bienvenida"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:scaleX="2"
        android:scaleY="2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:scaleX="2"
        android:scaleY="2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fini_txtv_opciones"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:layout_marginTop="35dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fini_txtv_carnet"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:layout_marginTop="85dp"
        android:scaleX="3"
        android:scaleY="3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fini_txtv_vacunas"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:layout_marginTop="55dp"
        android:scaleX="3"
        android:scaleY="3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fini_txtv_ubicacion"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:layout_marginTop="55dp"
        android:scaleX="3"
        android:scaleY="3"
        />
</LinearLayout>
</FrameLayout>