<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/ini_txtv_vacunacion"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:background="@drawable/logo1"
            android:scaleX="0.8"
            android:scaleY="0.8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ini_txtv_shark"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/log_txtv_mensaje"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:background="#0000"
            android:src="@drawable/scan" />

        <EditText
            android:id="@+id/log_etxt_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/log_etxt_dni"
            android:inputType="number"
            android:maxLength="8"
            android:padding="10dp" />

        <EditText
            android:id="@+id/log_etxt_fechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/log_etxt_fechaNac"
            android:maxLength="10"
            android:padding="10dp"
            android:gravity="center"
            android:focusable="false"
            android:clickable="false"
            />

        <EditText
            android:id="@+id/log_etxt_fechaEmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/log_etxt_fechaEmi"
            android:maxLength="10"
            android:padding="10dp"
            android:gravity="center"
            android:focusable="false"
            android:clickable="false"
            />



        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/log_btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:text="@string/log_btn_ingresar"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/log_btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/log_btn_salir"
                android:layout_weight="1"
                android:textAllCaps="false"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="@string/log_txtv_copyright"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>